# docker-ros-part2

./: Dockerfile  Makefile  build_ros_launch.sh  entrypoint.sh
src/alpha/: CMakeLists.txt  package.xml
src/alpha/config/: config.rviz  params.yaml
src/alpha/launch/: launcher.py
src/alpha/src/: dynamics.cpp  dynamics.hpp  test.cpp
src/simulator/: CMakeLists.txt  package.xml
src/simulator/launch/: launcher.launch.py  xml.launch.xml
src/simulator/scripts/: ros_kinematic copy.cpp  ros_kinematic.cpp  ros_kinematic.hpp
src/uamv0/: CMakeLists.txt  package.xml
src/uamv0/config/: joint_names_uamv0.yaml
src/uamv0/models/uamv0_description/: model.config  model.sdf
src/uamv0/models/uamv0_description/meshes/: End_link.STL  Inter_link.STL  Manip_base_link.STL  Prop1_link.STL  Prop2_link.STL  Prop3_link.STL  Prop4_link.STL  base_link.STL
src/uamv0/worlds/: neighborhood.world  simple.world
